--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -21,7 +21,17 @@
     "eslint-config-airbnb": "^18.2.1",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "source-map-loader": "^3.0.0",
+    "typescript": "^3.9.9",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   }
