--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -21,7 +21,8 @@
     "eslint-config-airbnb": "^18.2.1",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.6",
