--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -5,19 +5,34 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "webpack-dev-server --open",
+    "build": "webpack",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/preset-react": "^7.13.13",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.1",
     "babel": "^6.23.0",
     "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.3.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
+    "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "source-map-loader": "^3.0.0",
+    "typescript": "^3.9.9",
     "webpack": "^5.38.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
