--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open",
+    "dev": "webpack serve --open",
     "build": "webpack",
     "start": "nodemon server.js"
   },
