--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --open",
     "build": "webpack",
-    "start": "nodemon server.js"
+    "dev-client": "webpack serve --open",
+    "dev-server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,12 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "babel": "^6.23.0",
+    "chart.js": "^3.3.0",
+    "cors": "^2.8.5",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -30,6 +34,7 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^2.0.0",
     "typescript": "^3.9.9",
     "webpack": "^5.38.0",
     "webpack-cli": "^4.7.0",
