--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "react-dev": "webpack --watch"
   },
   "keywords": [],
@@ -23,6 +23,9 @@
     "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
+    "nodemon": "^2.0.7",
+    "webpack-dev-server": "^3.11.2"
   }
 }
