--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.39.1",
