--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "babel-loader": "^8.2.2",
+    "enzyme": "^3.11.0",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.0.5",
     "nodemon": "^2.0.7",
     "webpack-dev-server": "^3.11.2"
   }
