--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -38,6 +38,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-17-updated": "^1.0.2",
     "enzyme-to-json": "^3.6.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^27.0.5",
     "nodemon": "^2.0.7",
